--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_APIKey=59ffbb3c-d06e-4b6e-ae32-1ca18ec48ea9
 VUE_APP_APIOrigin=https://api.thecatapi.com/v1
+VUE_APP_GMAP_URL=https://maps.googleapis.com/maps/api/geocode/json
+VUE_APP_GMAP_KEY=AIzaSyBeMACPYVpANsAk_sDvxVuCs7WnuRsyhQE
