--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.67",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "deep-clone": "^3.0.3",
